--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -77,6 +77,12 @@
 	 	\bibitem{davisputnam}
 	 	Davis, M.; Putnam, H. "A Computing Procedure for Quantification Theory". J.ACM. 7 (3): 201–215. (1960).
 	 	
+	 	\bibitem{quine} 
+	 	Quine, W. V. O. Two Dogmas of Empiricism. {\em The Philosophical Review} 60: 20 - 53. (1951).
+	 	
+	 	\bibitem{duhem}
+	 	Duhem, P. The Aim and Structure of Physical Theory. Princeton University Press: Oxford, UK, 1954. 
+	 	
 	 	\bibitem{RushbyFMbook} Rushby, J., 1993. Formal methods and the certification of critical systems. SRI International. Computer Science Laboratory.
 	 	\bibitem{DELcomplex} Aucher, G. and Schwarzentruber, F., 2013. On the complexity of dynamic epistemic logic. arXiv preprint arXiv:1310.6406.
 	 	% Reference 1
