--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -311,7 +311,7 @@ Rather than pursuing that route, we relax our axiom schema so as to avoid the de
 
 \section{Avoiding L\"ob}
 \label{sec:avoiding_lob}
-Earlier, we noted that there is a mathematical gravity pulling agents toward L\"ob's Obstacle due to the desiderata of rationality. Recall we described these desiderata as fundamentally \emph{external} and \emph{internal}. We seek rational agents that are accurate with respect to the external world, in that their beliefs (knowledge) is are true. We also seek rational agents that are highly introspectively accurate, able to draw inferences about their internal epistemic states. With this framework in mind, an approach to avoiding L\"ob's Obstacle that adopts $\mathbb{GL}$ as the epistemic operator, as in \cite{modal_prisoner}, eschews the external desiderata in favor of the internal desiderata. The agent is highly introspective, and we, as external observers, take it for granted that they are also externally accurate, though they themselves could not conclude this in general.
+Earlier, we noted that there is a mathematical gravity pulling agents toward L\"ob's Obstacle due to the desiderata of rationality. Recall we described these desiderata as fundamentally \emph{external} and \emph{internal}. We seek rational agents that are accurate with respect to the external world, in that their beliefs (knowledge) are true. We also seek rational agents that are highly introspectively accurate, able to draw inferences about their internal epistemic states. With this framework in mind, an approach to avoiding L\"ob's Obstacle that adopts $\mathbb{GL}$ as the epistemic operator, as in \cite{modal_prisoner}, eschews the external desiderata in favor of the internal desiderata. The agent is highly introspective, and we, as external observers, take it for granted that they are also externally accurate, though they themselves could not conclude this in general.
 
 In order to avoid L\"ob's Obstacle, we eschew the internal accuracy desideratum, and model agents who know only that their knowledge is accurate of the world, but not whether they know something or not, and have sufficient introspection as to know that they do not believe inconsistencies, and that they have strong evidence for their beliefs. This model is better suited to human-like agents who interact with reality and lack perfect information about the environment.
 
