--- a/Introduction.tex
+++ b/Introduction.tex
@@ -11,13 +11,13 @@ Dynamic logic itself originated in computer science as a way to formally study t
 
 This dissertation picks up the thread from philosophical logic, specifically the efforts to use dynamic epistemic logic to model behavior in the rarefied world of games and toy examples. There researchers have made progress formalizing simple scenarios where one agent announces to the other something, and this causes the other agent's knowledge to increase. We extend that logic here in two ways. First, we experiment with its application to real humans piloting aircrafts. The environment is more complex, and challenges the logic to become a more realistic representation of human knowledge. To address this, we weaken the axioms of knowledge, and include axioms of belief and the relationship between knowledge and belief. The second extension concerns the normative aspect of actions. Dynamic epistemic logics impose preconditions on actions that determine whether they can be performed. We extend this idea with another precondition governing whether the action can be safely performed. It is a simple idea that opens up a wide new world of expressive power for the logics, as the underlying normative precondition function can be almost any normative aspect one cares to consider. One could swap out our safety precondition function with an ethical precondition function, or a legal precondition function, and develop similar dynamic logics of ethical or legal agency. Those applications are beyond the scope of this dissertation, however.
 
-In order to validate the above extensions, we rely on rigorous tools to check our math, so to speak. Many other researchers have made great strides in mechanizing the proof and model theories of modal logics in the interactive theorem proving tool Coq. We follow their lead and similarly extend their efforts to bear out the logic we develop in the target application domain. We modify a deep embedding of dynamic epistemic logic in Cog to create a deep embedding of our logic. We verify the theorems of the object language in the target domain in Coq, as well as the soundness and completeness proofs in the metalanguage in Coq. While this is not a novel approach to logic research, it represents a more rigorous and computational approach to the methods of logic research that help move the dissertation from the merely philosophical domain and into the computer science domain. We do not develop any new theorem proving tools or techniques in the thesis, but our use of the interactive theorem prover itself is a feature that distinguishes this dissertation as one of computer science.
+In order to validate the above extensions, we rely on rigorous tools to check our math, so to speak. Many other researchers have made great strides in mechanizing the proof and model theories of modal logics in the interactive theorem proving tool Coq. We follow their lead and similarly extend their efforts to bear out the logic we develop in the target application domain. We modify a deep embedding of dynamic epistemic logic in Coq to create a deep embedding of our logic. We verify the theorems of the object language in the target domain in Coq, as well as the soundness and completeness proofs in the metalanguage in Coq. While this is not a novel approach to logic research, it represents a more rigorous and computational approach to the methods of logic research that help move the dissertation from the merely philosophical domain and into the computer science domain. We do not develop any new theorem proving tools or techniques in the thesis, but our use of the interactive theorem prover itself is a feature that distinguishes this dissertation as one of computer science.
 
 We have chosen the target domain of aviation safety, and it has a nice property that makes it a good candidate domain for extending the logic. Rather than modelling a wide array of behaviors and information that apply to human behavior generally, we need only model the behavior and information that relates to flying an airplane. We need to model the instrument readings and the pilot's inputs to the flight controls. This significantly cuts down the expressive space we need to handle. However, it is still a real human in a real world situation, requiring the logic to relax certain assumptions about the reasoning power of the agents and the information they have about the state of the world. Instrument readings can be conflicting, and pilots can be unaware of this conflict. This is not typically a situation logicians have tried to model in the past. Additionally, aviation safety is already a domain familiar with the use of formal methods to increase assurance, so the approach is not so novel as to be completely foreign to the target domain's researchers. This gives us related work to compare and contrast the present efforts to.
 
 In particular, various logics exist for modelling safety properties of avionics systems, and tools for verifying that systems satisfy those properties. Aviation historically has been one of the few domains where the cost, perceived or actual, of formal verification is justified by the risks associated with system failure. We have engaged with this research community to some extent through collaborative research, conference presentations, and journal articles, and have received very helpful feedback. In some ways the approach adopted in this dissertation is too heavy handed for the particular needs of formal methods researchers in aviation safety. Rushby makes this case particularly well in his response to Ahrenbach and Goodloe \cite{AhrenbachGoodloe}. Many of the benefits achieved by the approach pursued here can be had through more straight forward integrations of modal logic with existing formal verification frameworks. Rushby achieves analogous results with merely a modal operator for a pilot's belief sufficing, with the belief treated as an input variable to the verification system just like any other.
 
-However, our purposes here differ slightly from those of researchers focused on the aviation domain. An aviation-focused researcher asks `what is the best way to use this formal method in order to make aviation safer?', while we ask, `What domains are suitable proving grounds for this new general formal method?' We seek a level of generality beyond aviation, and so in some cases are unwilling to sacrifice the heavy machinery for the benefit of having a simpler pilot monitoring logic. We seek to develop a general logic of realistic agency, and we validate it in the proving ground of aviation safety. Just as a geneticist is interested in \emph{Drosophila melanogaster} (fruit flies), or an artificial intelligence researcher is interested in chess, because these subject (or target) domains are areas to apply new techniques and test new approaches~\cite{Kohler,Hsu}\footnote{In his book about the building of \emph{Deep Blue}, Hsu decries being called an AI researcher, and prefers his work to be seen as Very Large Scale Integration (VLSI) research, but the point stands that chess to him was a target domain useful as a proving ground for his primary research interest.}. 
+However, our purposes here differ slightly from those of researchers primarily focused on the aviation domain. An aviation-focused researcher asks `what is the best way to use this formal method in order to make aviation safer?', while we ask, `What domains are suitable proving grounds for this new general formal method?' We seek a level of generality beyond aviation, and so in some cases are unwilling to sacrifice the heavy machinery for the benefit of having a simpler pilot monitoring logic. We seek to develop a general logic of realistic agency, and we validate it in the proving ground of aviation safety. Just as a geneticist is interested in \emph{Drosophila melanogaster} (fruit flies), or an artificial intelligence researcher is interested in chess, because these subject (or target) domains are areas to apply new techniques and test new approaches~\cite{Kohler,Hsu}\footnote{In his book about the building of \emph{Deep Blue}, Hsu decries being called an AI researcher, and prefers his work to be seen as Very Large Scale Integration (VLSI) research, but the point stands that chess to him was a target domain useful as a proving ground for his primary research interest.}. 
 
 The new approach pursued here, as mentioned earlier, is to relax the assumptions about agent rationality that other philosophical logics make, while augmenting the dynamic modality of action to include considerations of safety. If all goes well, this yields a logic for reasoning about realistic agents performing safe or unsafe actions, and about their beliefs and knowledge about those actions.
 
@@ -36,7 +36,7 @@ The logic, which I call Dynamic Agent Safety Logic (\DASL), is based on the logi
 \end{equation*}
 One can read this as, ``if an agent has knowledge of a situation (\emph{e.g.} a game), and the agent is rational, then the agent executes a good action. In game theory, the important terms are suitably formalized for mathematical treatment. Knowledge is assumed to be perfect, rationality is defined as the maximization of some measure of utility, and good actions are those that bring about the outcomes with the most possible utility payoffs. The definitions make the inference an analytic truth.
 
-Empirically, however, humans frequently deviate from the prescribed behavior. Looking at the above formula, we can ask a question: what can we infer when an agent fails to execute the prescribed action, as when pilots provide unsafe control inputs to their aircrafts? We can answer this question by examining the contrapositive of the above game-theoretic inference:
+Empirically, however, humans frequently deviate from the prescribed behavior. Looking at the above formula, we can ask a question: what can we infer when an agent fails to execute the prescribed action, as when pilots provide unsafe control inputs to their aircraft? We can answer this question by examining the contrapositive of the above game-theoretic inference:
 \begin{equation*}
 \tlnot \mathit{Good\_Action} \iimplies \tlnot (\mathit{Knowledge\_of\_Situation} \tland \mathit{Rationality}),
 \end{equation*}
@@ -60,7 +60,7 @@ I have formally captured such inferences with \DASL, where a (mostly) rational a
 
  
 
-The history of research in this area dates back to the 1950s and '60s in the development of temporal logic (or tense logic) by Arthur Prior~\cite{Prior}, a graph theoretic semantics by Saul Kripke~\cite{Kripke}, and logics for belief and knowledge due to work by Rescher~\cite{rescher}, von Wright~\cite{vonWright}, and Hintikka~\cite{Hintikka}. These logics formalize reasoning about what was true, what will be true at some point, what is always going to be true, what is believed to be true, and what is known to be true. Each of these modifiers is a truth modality, and hence they each constitute a modal logic. The Amsterdam school and others built on these methods, especially the work by Patrick Blackburn~\cite{modal}, which illustrates the general features of any modal logic as a tool for reasoning about systems that can be modeled as graphs from an \emph{internal} perspective, whereas first order logic reasons about such systems from an external perspective. A first order formula might say what is true of the object \emph{x}, from a global perspective, but modal logic allows us to formalize truth from \emph{x}'s perspective. If the first order formula is $\forall x, \exists y:\ R(x,y) \tland P(y) \iimplies P(x)$, the corresponding modal formula would simply be $\Diamond_{R} p \iimplies p$. They both say the same thing: For any node $x$ in the graph, if it can reach a node $y$ by relation $R$, and $y$ is a node where the proposition ``\emph{y} is \emph{P}'' holds, then ``\emph{x} is \emph{P}'' holds. The former explicitly quantifies over the nodes, and the latter does so implicitly through the semantics, to be described later.
+The history of research in this area dates back to the 1950s and '60s in the development of temporal logic (or tense logic) by Arthur Prior~\cite{Prior}, a graph theoretic semantics by Saul Kripke~\cite{Kripke}, and logics for belief and knowledge due to work by Rescher~\cite{rescher}, von Wright~\cite{vonWright}, and Hintikka~\cite{Hintikka}. These logics formalize reasoning about what was true, what will be true at some point, what is always going to be true, what is believed to be true, and what is known to be true. Each of these modifiers is a truth modality, and hence they each constitute a modal logic. The Amsterdam school and others built on these methods, especially the work by Patrick Blackburn~\cite{modal}, which illustrates the general features of any modal logic as a tool for reasoning about systems that can be modeled as graphs from an \emph{internal} perspective, whereas first order logic reasons about such systems from an external perspective. A first order formula might say what is true of the object \emph{x}, from a global perspective, but modal logic allows us to formalize truth from \emph{x}'s perspective. If the first order formula is $\forall x, \exists y:\ R(x,y) \tland P(y) \iimplies P(x)$, the corresponding modal formula would simply be $\Diamond_{R} p \iimplies p$. Here, $P(x)$ is a first order predicate $P$ true of object $x$ in the first formula, and $p$ is a propositional letter in the second formula. Both formulas say the same thing: For any node $x$ in the graph, if it can reach a node $y$ by relation $R$, and $y$ is a node where the proposition ``\emph{y} is \emph{P}'' holds, then ``\emph{x} is \emph{P}'' holds. The former explicitly quantifies over the nodes, and the latter does so implicitly through the semantics, to be described later.
 
 While these developments occurred in what might be called the philosophical branch of modal logic research, researchers in economics explored the mathematical foundations of game theory. Aumann, in~\cite{Aumann}, showed the axioms of epistemic logic that must be assumed in order for classical game theoretic results to hold. The agents in classical games, otherwise known as \emph{homo economicus}, are ideally rational, with perfect knowledge of their situations. We will meet these axioms and modify them for our purposes later.
 
