--- a/Summary.tex
+++ b/Summary.tex
@@ -1,7 +1,7 @@
 \chapter{Summary and concluding remarks}
 	\label{CH_summary}
 
-In this work, we have presented a dynamic modal logic for reasoning about the relationship between an agent's beliefs, knowledge, and action, with a distinction between mere action and safe action expressible. We named this logic Dynamic Agent Safety Logic, or \DASL. Including this many modalities in one logic makes it very expressible and suitable for modelling a variety of realistic situations involving human-like agents. Additionally, the logic was developed with careful concern for realism. This departs from the typical thesis of modern lmodal ogic, which develops a logic with advanced formal properties without much regard for the realism of its foundational axiom schemas. By carefully considering the philosophical implications of our static base, the thesis made advances in reconnecting the worlds of epistemology and epistemic logic, and philosophy and modal logic more generally.
+In this work, we have presented a dynamic modal logic for reasoning about the relationship between an agent's beliefs, knowledge, and action, with a distinction between mere action and safe action expressible. We named this logic Dynamic Agent Safety Logic, or \DASL. Including this many modalities in one logic makes it very expressible and suitable for modelling a variety of realistic situations involving human-like agents. Additionally, the logic was developed with careful concern for realism. This departs from the typical thesis of modern modal ogic, which develops a logic with advanced formal properties without much regard for the realism of its foundational axiom schemas. By carefully considering the philosophical implications of our static base, the thesis made advances in reconnecting the worlds of epistemology and epistemic logic, and philosophy and modal logic more generally.
 
 We paid careful attention to the philosophical commitments our epistemic logic carried with it, and worked to develop a philosophically defensible static foundation. This required us to adopt philosophically defensible positions against skepticism and of justification, which we did. We specified an interpretation of the possibility relations that conforms well to the predominant epistemic theory known as evidentialism, with a foundationalist structure to justification. In this sense, the thesis makes advances as a formal theory of epistemology, though it is certainly not complete. More work needs to be done in connecting the formalized interpretations to the system itself. One idea for doing this is to build a simple AI system with sensors and actuators, which abides by the axioms of \DASL\ in its reasoning, and constructs models based on objective and subjectively available evidence. This is beyond the scope of the thesis, however.
 
