--- a/Approval.tex
+++ b/Approval.tex
@@ -5,8 +5,8 @@ The undersigned, appointed by the Dean of the Graduate School, have
 examined the dissertation entitled: % Choose thesis or dissertation
 
 \vspace{8mm}
-\centerline{FORMAL METHODS WITH} % The title on the Title Page must be in all caps.
-\centerline{DYNAMIC AGENT SAFETY LOGIC}
+\centerline{DYNAMIC AGENT SAFETY LOGIC:} % The title on the Title Page must be in all caps.
+\centerline{THEORY AND APPLICATIONS}
 \vspace{8mm}
 \noindent presented by Seth Ahrenbach, % Edit with your name (does not need to be in all caps.)
 
