--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -194,7 +194,7 @@ Relaxing a frame condition changes the $R$ relation, and in doing so changes the
 	\end{eqnarray}
 	\item Euclidean
 	\begin{eqnarray}
-	\forall x,y,z\ R(x,y) \tland R(y,z) \iimplies R(x,z)\\
+	\forall x,y,z\ R(x,y) \tland R(x,z) \iimplies R(y,z)\\
 	\Diamond \varphi \iimplies \Box \Diamond \varphi
 	\end{eqnarray}
 	\item Seriality
@@ -230,7 +230,7 @@ Finally, \emph{negative introspection} states that an agent does not know someth
 These axioms are firmly rooted in the literature of formal epistemology and epistemic logic, and relaxing them in order to model more realistic agents requires a word or two. This section introduces and defends our relaxation of the classical axiomatization.
 
 \subsection{Why S5 Is Appealing} 
-Before presenting our relaxed axiom schema for knowledge, we acknowledge the appealing properties of the S5 knowledge operator. Logicians who adopt the S5 knowledge operator have good reasons for doing so, both technical and intuitive. The technical appeal lies in the fact that the S5 operator is well-behaved from a logical point of view. Epistemic logics with S5 operators are decidable because S5 operators have semantics that satisfy the finite model property, meaning that every invalid proposition has a finite counter-model. The S5 knowledge operator allows a formula prefixed by any arbitrary combination of $\Kns{i}$ and $\Poss{i}$ symbols to be reduced to a formula prefixed by at most two. This keeps the models small.
+Before presenting our relaxed axiom schema for knowledge, we acknowledge the appealing properties of the S5 knowledge operator. Logicians who adopt the S5 knowledge operator have good reasons for doing so, both technical and intuitive. The technical appeal lies in the fact that the S5 operator is well-behaved from a logical point of view. Epistemic logics with S5 operators are decidable because S5 operators have semantics that satisfy the finite model property, meaning that every invalid proposition has a finite counter-model. The S5 knowledge operator allows a formula prefixed by any arbitrary combination of $\Kns{i}$, and its dual $\Poss{i}\equiv\tlnot\Kns{i}\tlnot$, symbols to be reduced to a formula prefixed by at most two. This keeps the models small.
 
 On the intuitive side, the relations that define the semantics of an S5 knowledge operator are equivalence relations. They are defined as reflexive and Euclidean, which implies that they are also transitive and symmetric. Equivalence relations capture a notion of indistinguishability because each world in the equivalence class is indistinguishable from each other. All the modal formulas true at one of the worlds in an equivalence relation are true at each of the other worlds in the relation, so from a modal perspective, they are indistinguishable. When the modality is knowledge, this means that relative to the agent's knowledge, the worlds are indistinguishable. 
 
